--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,20 +15,17 @@
         <activity
             android:name=".Shop"
             android:exported="false" />
-        <activity
-            android:name=".CharacterScreen"
-            android:exported="false"
-            android:label="@string/title_activity_character_screen"
-            android:theme="@style/Theme.ChoresMaster" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" >
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".CharacterSelectionActivity" />
+        <activity android:name=".CharacterScreen" />
+
     </application>
 
 </manifest>
